--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana´s Portfolio</title>
+    <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
+    <title>My Resume</title>
 </head>
 
 <body>
-    <h1>Ana Chaves´s Portfolio</h1>
-    <h2>Learning Web Development</h2>
+    <h1>CV - Ana Chaves</h1>
+    <img src="./Support/CV_photo.jpg" height = 150 alt="Ana´s photo">
+    <br>
+    <h3><a href="./Contact_Me.html">My Contacts</a> &nbsp &nbsp
+        <a href="./Hobbies.html">Hobbies</a>
+    </h3> 
     <hr>
-    <h3>
-        <a href="./public/Ana-movies.html">Movie Ranking Project</a>
-    </h3>
-        <img src="./assets/images/movie-project.png" height="200" alt="screen shot of project">
-    <h3>
-        <a href="./public/Ana-birthday.html">Birthday Invite Project</a>
-    </h3>
-        <img src="./assets/images/birthday-project.png" height="200" alt="screen shot of project">
+    <h2>Summary</h2>
+        <p>I like to think that I'm a simple and nice person, I love my friends, family and my Pets.
+        <br>I am a very passionate person and that's what I put in everything I do.
+        <br>I am passionate about traveling, meeting new people and places and living new experiences.
+        <br>I love new challenges and to have the opportunity to grow and apprenticeship.
+        <br>I am very motivated in developing my programing skills.</p> 
     <hr>
-    <a href="./public/about.html">About Me</a> 
-    <a href="./public/contact.html">Contact</a>
+    <h2>Education</h2>
+    <h4>Law degree</h4>
+    <ul><li>Law Faculty - University of Lisbon</li>
+        <li>Year of conclusion- 2013</li></ul>
+        <hr>
+    <h2>Work Experience</h2> 
+    <h4>- Manager Workforce Manager - Current</h4>
+    <ul><li>BCD Travel</li>
+        <li>Sep 2022 - Present</li></ul>
+    <h4>- Global Workforce Manager</h4>
+    <ul><li>DocPlanner</li>
+        <li>Jul 2021 - Sep 2022</li></ul>
+    <h4>- Workforce Management Analyst</h4>
+    <ul><li>Travelperk</li>
+        <li>Jun 2019 - Jul 2021</li></ul>
+    <hr>
+    <h2>Skills</h2>   
+        <ul><li>Languages</li>
+                <ol><li>Portuguese - Native</li>
+                    <li>English - C2</li>  
+                    <li>Spanish - C1</li></ol>
+            <li>Technical</li>
+                <ol><li>Microsoft Office - Advanced</li>
+                    <li>Python - Basic</li>
+                    <li>HTML - Basic</li></ol>
+        </ul>
+    <hr>
+    <h2>Certifications</h2> 
+        <ul><li>Tableau - Basic / Intermediate</li></ul>
+    <hr>  
 </body>
+<footer>
+    <small>Copyright © 2023 Ana Chaves. All Rights Reserved.</small>
+</footer>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
